graphical elements fixed
stretched svg with preserveAspectRatio="none"

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,10 @@
 // Specific CSS for your home-page
 
-img.mountain-top-hero {
+.mountain-top-hero {
   // max-height: 250px;
-  // height: auto;
-  // width: 100%;
-  // object-fit: fill;
-  margin-top: -50px;
-  margin-bottom: -1px;
+  height: 30vh;
+  width: 100% !important;
+  object-fit: fill;
+  margin-top: -5vh;
+  margin-bottom: -10vh;
 }
